<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F9F8F9"
    tools:context=".ui.CardsFragment">

    <FrameLayout
        android:id="@+id/no_internet_frame"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="No Internet "/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/content_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="38sp"
                android:text="@string/my_cards"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:src="@drawable/male_model" />
            </FrameLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="32dp"
            android:text="@string/balance"/>

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="28sp"
            android:alpha="0.7"
            android:layout_marginTop="6dp"
            tools:text="@string/dummy_amount"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="46sp"
            tools:itemCount="4"
            android:layout_marginHorizontal="16dp"
            tools:listitem="@layout/item_card_layout"
            android:orientation="horizontal"/>
    </LinearLayout>



</LinearLayout>